--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,34 +1,67 @@
 
+h3 {
 
+  display:inline;
+}
 .chatmain {
 
+  display:flex;
+  flex-direction: column;
+  height: 40vh;
+  width:30%;
+  
+  position:fixed; 
+  bottom:0;
+  left:0;
+  right:0;
+  margin: 0 auto;
 
-	display:flex;
-	flex-direction: column;
-	height: 30vh;
-	width:30%;
-	
-	position:fixed;	
-	bottom:0;
-	left:0;
-	right:0;
-	margin: 0 auto;
 
-
-	
+  
 
 
 }
 
+.messageinput {
+
+     min-height: 20px;
+     padding: 1px;
+     width:100%;
+     margin-left:0%;
+     margin-bottom: 10px;
+     background-color: #f5f5f5;
+     border: 1px solid #e3e3e3;
+     border-radius: 4px;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
+
 .messages {
-	height:10vh;
-	flex-grow:1;
+
+
+    height:10vh;
+    flex-grow:1;
     overflow-y:scroll;
     -webkit-overflow-scrolling:touch;
     padding:10px
     width:100%;
+
+
+     min-height: 20px;
+     padding: 19px;
+     padding-top:0px;
+     margin-bottom: 20px;
+     background-color: #f5f5f5;
+     border: 1px solid #e3e3e3;
+     border-radius: 4px;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
 }
 
+.messages::-webkit-scrollbar {
+     /* This is the magic bit */
+     display: none;
+ }
 
 
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300);
@@ -115,6 +148,39 @@ body {
   box-shadow: 3px 10px 20px 5px rgba(0, 0, 0, .5);
 }
 
+
+
+h5 {
+
+font-size:20px;
+margin:5px;
+color:gray;
+
+
+}
+
+
+button {
+
+  border-radius: 2px;
+  font-family: Arial;
+  color: #777272;
+  font-size: 20px;
+  
+
+  
+
+  white-space: nowrap;
+   overflow:hidden;
+     width:50%;
+     margin-left:50%;
+     margin-bottom: 10px;
+     background-color: #f5f5f5;
+     border: 1px solid #e3e3e3;
+     border-radius: 4px;
+     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
+}
 
 .signupForm {
   width: 100%;
